[workspace]
resolver = "2"
members = [
    "api",
    "core",
    "cranker",
    "cranker/cli",
    "steward-writer-service",
    "writer-service",
]

exclude = ["jito-programs"]

[workspace.package]
authors = ["Jito Network Maintainers <support@jito.network>"]
repository = "https://github.com/jito-foundation/kobe"
homepage = "https://jito.network/"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
anyhow = "1.0.99"
axum = "0.6.2"
backoff = { version = "0.4.0", features = ["tokio"] }
backon = "1.5.2"
bincode = "1.3.3"
borsh = "1.5.7"
bs58 = "0.3.1"
cached = { version = "0.48.1", features = ["async", "proc_macro"] }
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive", "env"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.24"
futures-util = "0.3.25"
http = { version = "0.2.1" }
itertools = "0.5.9"
jito-priority-fee-distribution = { features = ["no-entrypoint"], git = "https://github.com/jito-foundation/jito-programs", branch = "master" }
jito-priority-fee-distribution-sdk = { git = "https://github.com/jito-foundation/jito-programs", branch = "master" }
jito-steward = { features = ["no-entrypoint"], git = "https://github.com/jito-foundation/stakenet", rev = "658caf2ce0f58c181bf5723412bfeb8472d152f5" }
jito-tip-distribution = { features = ["no-entrypoint"], git = "https://github.com/jito-foundation/jito-programs", branch = "master" }
jito-tip-distribution-sdk = { git = "https://github.com/jito-foundation/jito-programs", branch = "master" }
kobe-core = { path = "core", version = "1.0.0" }
log = "0.4.18"
mongodb = { version = "3.3.0", features = ["bson-3"] }
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0.17"
sentry = "0.29.1"
sentry-log = "0.29.1"
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.102"
solana-account-decoder = "=2.2.1"
solana-bincode = "=2.2.1"
solana-borsh = "=2.2.1"
solana-clap-utils = "=2.2.1"
solana-cli-config = "=2.2.1"
solana-cli-output = "=2.2.1"
solana-client = "=2.2.1"
solana-clock = "=2.2.1"
solana-commitment-config = "=2.2.1"
solana-gossip = { git = "https://github.com/gzalz/agave", branch = "gzalz/v2.2.1" }
solana-metrics = "=2.2.1"
solana-native-token = "=2.2.1"
solana-net-utils = "=2.2.1"
solana-packet = "=2.2.1"
solana-program = "=2.2.1"
solana-program-test = "=2.2.1"
solana-pubkey = "=2.2.1"
solana-remote-wallet = "=2.2.1"
solana-rpc-client = "=2.2.1"
solana-rpc-client-api = "=2.2.1"
solana-sdk = "=2.2.1"
solana-signature = "=2.2.1"
solana-streamer = { git = "https://github.com/gzalz/agave", branch = "gzalz/v2.2.1" }
solana-transaction-status = "=2.2.1"
solana-version = { git = "https://github.com/gzalz/agave", branch = "gzalz/v2.2.1" }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-pod = "0.5.1"
spl-stake-pool = { features = ["no-entrypoint"], version = "2.0.2" }
spl-stake-pool-cli = { path = "cranker/cli", version = "1.0.0" }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
stakenet-sdk = { package = "stakenet-sdk", git = "https://github.com/jito-foundation/stakenet", rev = "658caf2ce0f58c181bf5723412bfeb8472d152f5" }
thiserror = "1.0.37"
tokio = { version = "1.36.0", features = ["full"] }
tokio-retry = "0.3.0"
tower = { version = "0.4.13", features = ["limit", "buffer", "timeout", "load-shed"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = { version = "0.1.37" }
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
validator-history = { package = "validator-history", git = "https://github.com/jito-foundation/stakenet", rev = "658caf2ce0f58c181bf5723412bfeb8472d152f5", features = ["no-entrypoint"] }
