[package]
name = "kobe-analysis"
version = "1.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = "./README.md"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
kobe-core = { workspace = true }
log = { workspace = true }
mongodb = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }


