[package]
name = "kobe-api-client"
description = "Kobe API client"
version = "1.0.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
chrono = { workspace = true }
kobe-api = { workspace = true }
kobe-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-pubkey = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
