[package]
name = "kobe-core"
description = "Kobe Core is the foundational library that provides shared functionality, data models, and utilities used across all Kobe services"
version = "1.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = "./README.md"

[dependencies]
anchor-lang = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
jito-priority-fee-distribution = { workspace = true }
jito-priority-fee-distribution-sdk = { workspace = true }
jito-steward = { workspace = true }
jito-tip-distribution = { workspace = true }
log = { workspace = true }
mongodb = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
solana-client = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-native-token = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-transaction-status = { workspace = true }
spl-stake-pool = { workspace = true }
spl-stake-pool-cli = { workspace = true }
stakenet-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
validator-history = { workspace = true }
