[package]
name = "spl-stake-pool-cli"
description = "SPL-Stake-Pool Command-line Utility"
version = "1.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = "./README.md"

[dependencies]
bincode = { workspace = true }
borsh = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
spl-stake-pool = { workspace = true }
spl-token = { workspace = true }
